# tiling

./: .gitignore  .gitmodules  CMakeLists.txt  Derivatives.cpp  Derivatives.h  Helpers.cpp  Helpers.cpp.bak  Helpers.h  Minimization.cpp  Minimization.h  README.md  Slice.h  SliceParser.cpp  SliceParser.h  SliceStack.cpp  SliceStack.h  Tile.cpp  Tile.h  Tiler.cpp  Tiler.h  TilingUtils.cpp  TilingUtils.h  ViewTetMesh.cpp  ViewTetMesh.h  contourtree.cpp  curvatureFlow.cpp  curvatureFlow.h  decompose_L.cpp  decompose_L.h  glob_defs.h  icoso_tile.cpp  inpoly.hpp  main.cpp  marching_tets.cpp  marching_tets.h  offsetSurface.cpp  offsetSurface.cpp_bak  offsetSurface.h  test_harmonic.cpp  tiler_main.cpp  (+2 more)
Remeshing/: BasicMeasurements.h  CMakeLists.txt  IsotropicRemeshing.cpp  IsotropicRemeshing.h  KDTreeNode.h  MeshTraits.h  NearestTriangleSearch.cpp  NearestTriangleSearch.h  OpenMeshConversion.cpp  OpenMeshConversion.h  OpenMeshGlobals.h  Remesh.cpp  Remesh.h  Remeshing.pro  SquareDistancePointToTriangle.cpp  TriangleSurfaceArea.cpp  main.cpp
cmake/: FindDlib.cmake  FindEigen.cmake  FindOpenMesh.cmake  Findlibtourtre.cmake  Findmeshfix.cmake
debug/: tiler_debugger.cpp  tiler_debugger.in
mixedfem_sample_code/: both_slices.off  both_slices_orig.txt  both_slices_pre.off  both_slices_pre_orig.txt  bump_demo.m  cotmatrix.m  create_irregular_grid_with_min_angle.m  create_regular_grid.m  execute_triangle.m  massmatrix.m  massmatrix_intrinsic.m  readOBJ.m  readOFF.m  writeOBJ.m  writeOFF.m
test/: cylinder_test.off  cylinder_test_orig.txt  sphere_3_noorig.off  traces.0  traces.1  traces.2  traces.3  vr_copy_c1.3  vr_copy_c2.0  vr_copy_c3.0
test/cylinder/: traces.2
test/sphere/: sphere.tiff  traces.0  traces.1  traces.10  traces.11  traces.12  traces.13  traces.14  traces.15  traces.16  traces.17  traces.18  traces.19  traces.2  traces.20  traces.21  traces.22  traces.23  traces.24  traces.25  traces.26  traces.27  traces.28  traces.29  traces.3  traces.30  traces.31  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9  traces.ser  traces.vrs
